5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1712_2496.log
== TEST (2019-05-08 10:14:09) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
	else:
		print("invalido")
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
invalido
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:14:38) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
		print(i)
	else:
		print("invalido")
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
invalido
1
2
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:14:51) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
		print(i)
	else:
		print("invalido")
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
invalido
1
2
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:15:54) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		print(i)
	else:
		print("invalido")
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
invalido
2
3
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:19:14) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(i)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		print(i)
	else:
		print("invalido")
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
0
invalido
1
2
2
3
3
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:19:32) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(i)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		print(i)
	else:
		print("invalido")
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.202723
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
invalido
1
2
2
3
3
invalido
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
invalido
1
invalido
2
invalido
3
invalido
4
invalido
5
invalido
6
invalido
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0
1
1
2
2
invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:21:13) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(i)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
print(i)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 12
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:21:22) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(i)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
0
1
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:21:34) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(i)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.104991
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
1
3
5
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
1
2
3
4
5
6
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0
2
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:21:38) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(i)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
0
1
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:22:54) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = i + 1
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:23:42) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + i
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:23:48) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
4
333
6
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:24:01) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.125611
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
1075
4
333
6
-9
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
2
32653
4
-10953
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:09) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
2
333
3
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:29) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + i + i + i + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
10
333
15
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:45) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + i + i + i + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
10
333
15
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:25:04) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i 
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
2
333
3
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:25:08) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i 
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
2
333
3
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:25:29) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + num 
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
1077
333
336
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:25:38) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + num 
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.117795
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
1075
1077
333
336
-9
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
10954
32653
32655
-10953
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:25:50) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
1075
333
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:25:58) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
1075
333
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:04) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
1077
333
336
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:13) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
1077
333
336
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:22) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	print(num)
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
1075
1077
333
336
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:35) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
1077
336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:47) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
1077
336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:52) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
1075
333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:58) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
1075
333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:27:02) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
1077
336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:02) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = num + 2
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
1077
335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:14) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = num + 2
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:17) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		i = num + 2
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:27) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:28:36) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.198655
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
2
3
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:41) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + i
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:59) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + num
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
1077
336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:24) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
		print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:56) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:30:15) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:30:34) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + i
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:30:43) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 2
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:30:59) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:31:04) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:31:25) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:31:58) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- ERROR:
File "XXXX", line 8
    soma = i + 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:32:02) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + 1
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:32:42) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + num
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:32:54) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + num
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- EXECUTION TIME:
0.18687
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
883
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:32:58) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + num
	# Verifica se valor eh divisivel por 2
	if(num > 0):
		soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:33:39) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + num
	# Verifica se valor eh divisivel por 2
	#if(num > 0):
	soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:33:49) 
-- CODE:
num = int(input("Digite um numero: "))
i = 0
# Laco de repeticao
while( num != -1 ):
	i = i + num
	# Verifica se valor eh divisivel por 2
	#if(num > 0):
	soma = i + 0
	# Inputs seguintes
	num = int(input("Digite um numero: "))
	
print(soma)

-- EXECUTION TIME:
0.188172
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
